# cluster-registry

./: .Gopkg.toml.swp  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  Gopkg.toml  LICENSES  OWNERS  README.md  RELEASE.md  SECURITY_CONTACTS  WORKSPACE  cluster-registry-crd.yaml  update-codegen.sh
api/: swagger.json
cmd/clusterregistry/: BUILD.bazel  apiserver.go  clusterregistry.go
cmd/clusterregistry/app/: cluster.go  clusterregistry.go  server.go
cmd/clusterregistry/app/authenticator/: config.go
cmd/clusterregistry/app/options/: authentication.go  options.go
cmd/crinit/: BUILD.bazel  crinit.go
cmd/crinit/app/: crinit.go
cmd/kubefed/: kubefed.go
cmd/kubefed/app/: kubefed.go
docs/: README.md  api_design.md  api_reference.md  development.md  release.md  userguide.md
docs/api-reference/clusterregistry/v1alpha1/: definitions.html  operations.html
docs/reference/openapi-spec/: swagger.json
docs/reference/static_includes/: _clusterregistry.md  _definitions.md  _oldversions.md  _overview.md
examples/: cluster-two.yaml  cluster.yaml
examples/samplecontainer/: README.md  cluster-two.yaml  cluster.yaml
examples/slackcontroller/: BUILD.bazel  README.md  main.go  slackcontroller.go
examples/webhook-authz/: README.md  authz.yaml  rules.hcl
hack/: bazel-test.sh  gopath_from_workspace.py  gopath_from_workspace.sh  imports.go  release.sh  update-api-reference-docs.sh  update-codegen.sh  update-openapi-spec.sh  verify-all-gensrc.sh  verify-go-src.sh  verify-spelling.sh
hack/go-tools/: update-gofmt.sh  verify-errpkg.sh  verify-gofmt.sh  verify-govet.sh  verify-klog.sh
pkg/apis/: doc.go
pkg/apis/clusterregistry/: BUILD.bazel  doc.go  register.go  types.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/clusterregistry/install/: BUILD.bazel  install.go  install_test.go
pkg/apis/clusterregistry/v1alpha1/: BUILD.bazel  doc.go  generated.pb.go  generated.proto  register.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go  zz_generated.kubebuilder.go  zz_generated.openapi.go
pkg/apis/clusterregistry/validation/: BUILD.bazel  validation.go  validation_test.go
pkg/client/clientset/versioned/: clientset.go
pkg/client/clientset/versioned/fake/: clientset_generated.go
pkg/client/clientset/versioned/typed/clusterregistry/v1alpha1/: cluster.go  clusterregistry_client.go
pkg/client/clientset/versioned/typed/clusterregistry/v1alpha1/fake/: fake_cluster.go  fake_clusterregistry_client.go
pkg/client/clientset_generated/clientset/: clientset.go
pkg/client/clientset_generated/clientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: register.go
pkg/client/clientset_generated/clientset/typed/clusterregistry/v1alpha1/: cluster.go  clusterregistry_client.go
pkg/client/clientset_generated/clientset/typed/clusterregistry/v1alpha1/fake/: fake_cluster.go  fake_clusterregistry_client.go
pkg/client/clientset_generated/internalclientset/: clientset.go
pkg/client/clientset_generated/internalclientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/internalclientset/scheme/: register.go
pkg/client/clientset_generated/internalclientset/typed/clusterregistry/internalversion/: cluster.go  clusterregistry_client.go
pkg/client/clientset_generated/internalclientset/typed/clusterregistry/internalversion/fake/: fake_cluster.go  fake_clusterregistry_client.go
pkg/client/informers/externalversions/: factory.go
pkg/client/informers/externalversions/clusterregistry/v1alpha1/: cluster.go  interface.go
pkg/client/informers_generated/externalversions/: BUILD.bazel  factory.go  generic.go
pkg/client/informers_generated/externalversions/clusterregistry/: interface.go
pkg/client/informers_generated/externalversions/clusterregistry/v1alpha1/: cluster.go  interface.go
pkg/client/informers_generated/externalversions/internalinterfaces/: BUILD.bazel  factory_interfaces.go
pkg/client/informers_generated/internalversion/: BUILD.bazel  factory.go  generic.go
pkg/client/informers_generated/internalversion/clusterregistry/: interface.go
pkg/client/informers_generated/internalversion/clusterregistry/internalversion/: cluster.go  interface.go
pkg/client/informers_generated/internalversion/internalinterfaces/: BUILD.bazel  factory_interfaces.go
pkg/client/listers/clusterregistry/v1alpha1/: cluster.go  expansion_generated.go
pkg/client/listers_generated/clusterregistry/internalversion/: BUILD.bazel  cluster.go  expansion_generated.go
pkg/client/listers_generated/clusterregistry/v1alpha1/: BUILD.bazel  cluster.go  expansion_generated.go
pkg/clusterregistry/: BUILD.bazel  aggregated.go  cluster.go  doc.go  server.go
pkg/clusterregistry/authenticator/: BUILD.bazel  config.go
pkg/clusterregistry/options/: BUILD.bazel  aggregated.go  authentication.go  authorization.go  doc.go  options.go  validation.go
pkg/clusterregistry/testing/: BUILD.bazel  server_test.go  testserver.go
pkg/crinit/: BUILD.bazel  crinit.go
pkg/crinit/aggregated/: BUILD.bazel  aggregated.go  aggregated_test.go  delete.go  init.go
pkg/crinit/common/: BUILD.bazel  common.go
pkg/crinit/init/: BUILD.bazel  init.go  init_test.go
pkg/crinit/options/: options.go
pkg/crinit/standalone/: BUILD.bazel  delete.go  init.go  standalone.go  standalone_test.go
pkg/crinit/testing/: testing.go
pkg/crinit/util/: BUILD.bazel  util.go
pkg/kubefed/: kubefed.go
pkg/kubefed/init/: init.go
pkg/printers/tableconvertor/: .tableconvertor.go.swp  BUILD.bazel  tableconvertor.go
pkg/registry/cluster/: BUILD.bazel  registry.go  strategy.go  strategy_test.go
pkg/registry/cluster/etcd/: .etcd.go.swp  .etcd_test.go.swp  BUILD.bazel  etcd.go  etcd_test.go
pkg/registry/cluster/etcd/registrytestutil/: BUILD.bazel  registrytestutil.go
test/integration/: BUILD.bazel  doc.go  server_test.go  testserver.go
