load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build", "docker_push")

docker_build(
    name = "clusterregistry-image",
    base = "@ubuntu//image",
    cmd = ["./clusterregistry"],
    files = [":clusterregistry"],
)

docker_push(
    name = "push-clusterregistry-image",
    image = ":clusterregistry-image",
    registry = "gcr.io",
    repository = "$(project)/clusterregistry",
    tag = "dev",
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["clusterregistry.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/clusterregistry:go_default_library",
        "//pkg/clusterregistry/options:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_apiserver//pkg/util/flag:go_default_library",
        "@io_k8s_apiserver//pkg/util/logs:go_default_library",
    ],
)

go_binary(
    name = "clusterregistry",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
