load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["crinit.go"],
    importpath = "k8s.io/cluster-registry/cmd/crinit",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/crinit:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/logs:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
    ],
)

go_binary(
    name = "crinit",
    importpath = "k8s.io/cluster-registry/cmd/crinit",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
